B&L QA/objects/Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>DASRX_Potential__c</fullName>
        <label>Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 1000</fullName>
                </value>
                <value>
                    <fullName>1001 - 3000</fullName>
                </value>
                <value>
                    <fullName>3001 - 10000</fullName>
                </value>
                <value>
                    <fullName>over 10000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Profile__c</fullName>
        <label>Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pionier</fullName>
                </value>
                <value>
                    <fullName>Early-follower</fullName>
                </value>
                <value>
                    <fullName>Conservative</fullName>
                </value>
                <value>
                    <fullName>Relluctant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Specifics__c</fullName>
        <label>Specifics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rx Institut</fullName>
                </value>
                <value>
                    <fullName>Home-Delivery</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DASRX_Visible_Shelf_Space__c</fullName>
        <label>Visible Shelf Space</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>small</fullName>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>big</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Lens_Fits_Per_Week__c</fullName>
        <description>How many Daily Lens Fits per week?</description>
        <inlineHelpText>How many Daily Lens Fits per week?</inlineHelpText>
        <label>Daily Lens Fits Per Week</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IndiaSU field to collect the distributor who service this account</description>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Profile (Distibutor)</relationshipLabel>
        <relationshipName>Account_Profile1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dominant_CTL_Care_Kit_displayed__c</fullName>
        <description>ECS Field</description>
        <label>Dominant CTL Care Kit displayed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Replenish</fullName>
                </value>
                <value>
                    <fullName>Fresh</fullName>
                </value>
                <value>
                    <fullName>Sensitive</fullName>
                </value>
                <value>
                    <fullName>Clear Care</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>AQuify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dominant_CTL_solution_Brand_displayed__c</fullName>
        <description>ECS Field</description>
        <label>Dominant CTL solution Brand displayed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Replenish</fullName>
                </value>
                <value>
                    <fullName>Fresh</fullName>
                </value>
                <value>
                    <fullName>Sensitive</fullName>
                </value>
                <value>
                    <fullName>Clear Care</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>AQuify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dominant_Dry_Eye_Brand_displayed__c</fullName>
        <description>ECS Field</description>
        <label>Dominant Dry Eye Brand displayed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Systane</fullName>
                </value>
                <value>
                    <fullName>Soothe</fullName>
                </value>
                <value>
                    <fullName>Refresh</fullName>
                </value>
                <value>
                    <fullName>Optive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dominant_Ocular_Nutritional__c</fullName>
        <description>ECS</description>
        <label>Dominant Ocular Nutritional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PreserVision</fullName>
                </value>
                <value>
                    <fullName>Ocuvite</fullName>
                </value>
                <value>
                    <fullName>ICAPS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employees_at_this_Location__c</fullName>
        <description>Total Number of Employees at this Location</description>
        <inlineHelpText>Total Number of Employees at this Location</inlineHelpText>
        <label>Employees at this Location</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_IOL__c</fullName>
        <description>The date that the IOL service contract expires.
Used by EMEA SU.</description>
        <label>End Date (IOL)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_Phaco_packs__c</fullName>
        <description>Used by EMEA SU</description>
        <label>End Date (Phaco packs)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_VR_Packs__c</fullName>
        <description>End date for VR Packs. Used by EMEA SU.</description>
        <label>End Date (VR Packs)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_ViscoElastics__c</fullName>
        <description>End date for visco-elastics. Used by EMEA SU.</description>
        <label>End Date (ViscoElastics)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enroll_Account_in_SDD_Test_Drive__c</fullName>
        <label>Enroll Account in SDD Test Drive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enroll_Account_in_Toric_Truth_Program__c</fullName>
        <label>Enroll Account in Toric Truth Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment Budgeted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Diagnostic_Preferences__c</fullName>
        <label>Equipment &amp; Diagnostic Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autorefractor</fullName>
                </value>
                <value>
                    <fullName>Biometry</fullName>
                </value>
                <value>
                    <fullName>Topography</fullName>
                </value>
                <value>
                    <fullName>Aberrometry</fullName>
                </value>
                <value>
                    <fullName>Dry Eye Evaluation</fullName>
                </value>
                <value>
                    <fullName>Retina Evaluation</fullName>
                </value>
                <value>
                    <fullName>Astigmatism Correction</fullName>
                </value>
                <value>
                    <fullName>Femto</fullName>
                </value>
                <value>
                    <fullName>Excimer</fullName>
                </value>
                <value>
                    <fullName>Yag</fullName>
                </value>
                <value>
                    <fullName>EMR</fullName>
                </value>
                <value>
                    <fullName>Calculations/IDVS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_Completed_By__c</fullName>
        <description>Who completes the evaluation?</description>
        <inlineHelpText>Who completes the evaluation?</inlineHelpText>
        <label>Evaluation Completed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Femto_Contract_Signed__c</fullName>
        <label>Femto Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Femto_Install__c</fullName>
        <label>Femto Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Femto_Notes__c</fullName>
        <label>Femto Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Femto_Other_Date__c</fullName>
        <label>Femto Other Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Femto_P3_Implemented__c</fullName>
        <label>Femto P3 Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Femto_Procedure_Volume__c</fullName>
        <label>Femto Procedure Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Femto_Proposal_Delivered__c</fullName>
        <label>Femto Proposal Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Femto_Site_Inspection_Complete__c</fullName>
        <description>Specific to Femto Install</description>
        <label>Femto Site Inspection Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Femto__c</fullName>
        <label>Femto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lensx</fullName>
                </value>
                <value>
                    <fullName>Victus</fullName>
                </value>
                <value>
                    <fullName>Optimedia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End - Equipment Budgeted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hema_Patients__c</fullName>
        <description>ECS</description>
        <inlineHelpText>What percent of this office&apos;s Hema patients are currently being refit into Silicone Hydrogel lenses?</inlineHelpText>
        <label>% Hema Patients Being Refit into Silicon</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IOL_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether this customer has an IOL service contract.
Used by EMEA SU.</description>
        <label>IOL Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Importance_Indicator__c</fullName>
        <label>Importance Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instruments__c</fullName>
        <label>Instruments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OPH</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>OPH &amp; ENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intention_to_Purchase_Femto__c</fullName>
        <label>Intention to Purchase Femto?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-3 Months</fullName>
                </value>
                <value>
                    <fullName>0-6 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IndiaSU field to identify an account as key account</description>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lasik_Center_Cost__c</fullName>
        <label>Lasik Center Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lasik_Surgeon_Equipment__c</fullName>
        <label>Lasik Surgeon – Equipment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interlace</fullName>
                </value>
                <value>
                    <fullName>Excimer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lasik_Surgeon_Quantity_per_Year__c</fullName>
        <label>Lasik Surgeon – Quantity per Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Demo_End_Date__c</fullName>
        <description>End date of the last demo that was presented to the customer.
Used by EMEA SU.</description>
        <label>Last Demo Ended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Demo_Ended__c</fullName>
        <description>Used by EMEA SU</description>
        <label>Last Demo Ended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Demo_Start_Date__c</fullName>
        <description>Start date of the last demo that was presented to the customer.
Used by EMEA SU.</description>
        <label>Last Demo Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Demo_Started__c</fullName>
        <description>Used by EMEA SU</description>
        <label>Last Demo Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_System_Name__c</fullName>
        <label>Legacy System Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>USSUR</description>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate Day Surgery</fullName>
                </value>
                <value>
                    <fullName>Corporate Owned ASC</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Doctor Office</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Hospital Day Surgery</fullName>
                </value>
                <value>
                    <fullName>Hospital Owned ASC</fullName>
                </value>
                <value>
                    <fullName>Surgeon Day Surgery</fullName>
                </value>
                <value>
                    <fullName>Surgeon Owned ASC</fullName>
                </value>
                <value>
                    <fullName>Teaching Institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_days_from_last_visit__c</fullName>
        <description>Created for KOREA SOLTA.</description>
        <label>Maximum days from last visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mfr_of_Choice_Daily__c</fullName>
        <label>Mfr. of Choice - Daily</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B&amp;L</fullName>
                </value>
                <value>
                    <fullName>Ciba</fullName>
                </value>
                <value>
                    <fullName>Cooper</fullName>
                </value>
                <value>
                    <fullName>Vistakon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mfr_of_Choice_Lens_Care__c</fullName>
        <description>Manufacturer of Choice - Lens Care</description>
        <inlineHelpText>Manufacturer of Choice - Lens Care</inlineHelpText>
        <label>Mfr. of Choice - Lens Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B&amp;L</fullName>
                </value>
                <value>
                    <fullName>Ciba</fullName>
                </value>
                <value>
                    <fullName>Cooper</fullName>
                </value>
                <value>
                    <fullName>Vistakon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mfr_of_Choice_MultiFocal__c</fullName>
        <description>Manufacturer of Choice - MultiFocal</description>
        <inlineHelpText>Manufacturer of Choice - MultiFocal</inlineHelpText>
        <label>Mfr. of Choice - MultiFocal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B&amp;L</fullName>
                </value>
                <value>
                    <fullName>Ciba</fullName>
                </value>
                <value>
                    <fullName>Cooper</fullName>
                </value>
                <value>
                    <fullName>Vistakon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mfr_of_Choice_SVS__c</fullName>
        <description>Manufacturer of Choice - Single Vision Spherical</description>
        <inlineHelpText>Manufacturer of Choice - Single Vision Spherical</inlineHelpText>
        <label>Mfr. of Choice - SVS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B&amp;L</fullName>
                </value>
                <value>
                    <fullName>Ciba</fullName>
                </value>
                <value>
                    <fullName>Cooper</fullName>
                </value>
                <value>
                    <fullName>Vistakon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mfr_of_Choice_Toric__c</fullName>
        <description>Manufacturer of Choice - Toric</description>
        <inlineHelpText>Manufacturer of Choice - Toric</inlineHelpText>
        <label>Mfr. of Choice - Toric</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B&amp;L</fullName>
                </value>
                <value>
                    <fullName>Ciba</fullName>
                </value>
                <value>
                    <fullName>Cooper</fullName>
                </value>
                <value>
                    <fullName>Vistakon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monofocal_IOL_1_Volume__c</fullName>
        <description>EMEA SU field</description>
        <label>Monofocal IOL 1 Volume</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monofocal_IOL_1__c</fullName>
        <description>EMEA SU field</description>
        <label>Monofocal IOL 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akreos</fullName>
                </value>
                <value>
                    <fullName>SofPort</fullName>
                </value>
                <value>
                    <fullName>Acrysof</fullName>
                </value>
                <value>
                    <fullName>Tecnis</fullName>
                </value>
                <value>
                    <fullName>Sensar</fullName>
                </value>
                <value>
                    <fullName>Zeiss-IOLtech</fullName>
                </value>
                <value>
                    <fullName>Corneal</fullName>
                </value>
                <value>
                    <fullName>Rayner</fullName>
                </value>
                <value>
                    <fullName>Hoya</fullName>
                </value>
                <value>
                    <fullName>AcriTec</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Rumex</fullName>
                </value>
                <value>
                    <fullName>USOptics</fullName>
                </value>
                <value>
                    <fullName>Hanita</fullName>
                </value>
                <value>
                    <fullName>Alcon</fullName>
                </value>
                <value>
                    <fullName>MI60</fullName>
                </value>
                <value>
                    <fullName>Oculentis</fullName>
                </value>
                <value>
                    <fullName>Domilens</fullName>
                </value>
                <value>
                    <fullName>1st Q</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Polytech</fullName>
                </value>
                <value>
                    <fullName>Dr. Schmidt</fullName>
                </value>
                <value>
                    <fullName>enVista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monofocal_IOL_2_Volume__c</fullName>
        <description>EMEA SU field</description>
        <label>Monofocal IOL 2 Volume</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monofocal_IOL_2__c</fullName>
        <description>EMEA SU field</description>
        <label>Monofocal IOL 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akreos</fullName>
                </value>
                <value>
                    <fullName>SofPort</fullName>
                </value>
                <value>
                    <fullName>Acrysof</fullName>
                </value>
                <value>
                    <fullName>Tecnis</fullName>
                </value>
                <value>
                    <fullName>Sensar</fullName>
                </value>
                <value>
                    <fullName>Zeiss-IOLtech</fullName>
                </value>
                <value>
                    <fullName>Corneal</fullName>
                </value>
                <value>
                    <fullName>Rayner</fullName>
                </value>
                <value>
                    <fullName>Hoya</fullName>
                </value>
                <value>
                    <fullName>AcriTec</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Rumex</fullName>
                </value>
                <value>
                    <fullName>USOptics</fullName>
                </value>
                <value>
                    <fullName>Hanita</fullName>
                </value>
                <value>
                    <fullName>Alcon</fullName>
                </value>
                <value>
                    <fullName>MI60</fullName>
                </value>
                <value>
                    <fullName>Oculentis</fullName>
                </value>
                <value>
                    <fullName>Domilens</fullName>
                </value>
                <value>
                    <fullName>1st Q</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Polytech</fullName>
                </value>
                <value>
                    <fullName>Dr. Schmidt</fullName>
                </value>
                <value>
                    <fullName>enVista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monofocal_IOL_3_Volume__c</fullName>
        <description>EMEA SU field</description>
        <label>Monofocal IOL 3 Volume</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monofocal_IOL_3__c</fullName>
        <description>EMEA SU field</description>
        <label>Monofocal IOL 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akreos</fullName>
                </value>
                <value>
                    <fullName>SofPort</fullName>
                </value>
                <value>
                    <fullName>Acrysof</fullName>
                </value>
                <value>
                    <fullName>Tecnis</fullName>
                </value>
                <value>
                    <fullName>Sensar</fullName>
                </value>
                <value>
                    <fullName>Zeiss-IOLtech</fullName>
                </value>
                <value>
                    <fullName>Corneal</fullName>
                </value>
                <value>
                    <fullName>Rayner</fullName>
                </value>
                <value>
                    <fullName>Hoya</fullName>
                </value>
                <value>
                    <fullName>AcriTec</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Rumex</fullName>
                </value>
                <value>
                    <fullName>USOptics</fullName>
                </value>
                <value>
                    <fullName>Hanita</fullName>
                </value>
                <value>
                    <fullName>Alcon</fullName>
                </value>
                <value>
                    <fullName>MI60</fullName>
                </value>
                <value>
                    <fullName>Oculentis</fullName>
                </value>
                <value>
                    <fullName>Domilens</fullName>
                </value>
                <value>
                    <fullName>1st Q</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Polytech</fullName>
                </value>
                <value>
                    <fullName>Dr. Schmidt</fullName>
                </value>
                <value>
                    <fullName>enVista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monofocal_Volume__c</fullName>
        <description>USSUR</description>
        <label>Monofocal Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Fits_per_Month__c</fullName>
        <description>ECS</description>
        <formula>Soft_Contact_Lens_Patients_Per_Wk_ECS__c *4 * per_of_patients_new_to_cl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>New Fits Per Month = (Soft Contact Lens Patients per Week) * 4 * (% of Patients New to Contact Lenses)</inlineHelpText>
        <label>New Fits per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Visits_Per_Month__c</fullName>
        <description>Create For KOREA SOLTA.</description>
        <label>No Of Visits Per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Brand Name/Modality/Comments</description>
        <inlineHelpText>Brand Name/Modality/Comments</inlineHelpText>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Beds__c</fullName>
        <description>USSUR</description>
        <label>Number of Beds</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Exam_Rooms__c</fullName>
        <description>Number of exam rooms at this location?</description>
        <inlineHelpText>Number of exam rooms at this location?</inlineHelpText>
        <label>Number of Exam Rooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Geriatric_Patients_Per_Week__c</fullName>
        <description>ECS uses, not created for How Many, If any, geriatric patients are seen in this office per week?</description>
        <inlineHelpText>How Many, If any, geriatric patients are seen in this office per week?</inlineHelpText>
        <label>Number of Geriatric Patients Per Week</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Machines__c</fullName>
        <description>Tracks the number of machines currently installed at this site.
Used by EMEA SU. and USSUR</description>
        <label>Number of Machines</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>